# delivery_service

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
db/: packages.py
endpoints/: admin.py  deliveries.py
middleware/: session.py
migrations/: env.py
migrations/versions/: 21db79ab3578_change_field_from_type_to_type_id.py  2c58313f027e_setup_database.py  495da0fd3962_added_session_id_field.py  7a94223c5daf_initial.py  7e653f2b3e98_add_delivery_cost_field.py  cadf43ac83ac_add_shipping_company_id_field.py  f6749c7cca67_added_table_package_type.py
models/: packages.py
redis_db/: redis_db.py  redis_setup.py
tasks/: calculate_delivery_cost_task.py  usd_rate_task.py
tests/: conftest.py  test_admin_tasks.py  test_deliveries.py
utils/: db_utils.py  session.py
