[tool.poetry]
name = "delivery service"
version = "2.1.3"
description = ""
authors = ["Roman Sizov <roman.sizov@gmail.com>"]
readme = "README.md"

[project]
name = "delivery-service"
version = "0.1.0"
description = ""
authors = [
    {name = "roman",email = "roman.sizov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "environs (>=14.1.1,<14.2.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "aiohttp (>=3.12.4,<4.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "marshmallow (>=3.26.1, <3.26.2)",
    "fastapi-pagination (>=0.13.1, <0.14.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
